# xluci2

./: README.md  README_ZH.md  contributing.md  luci2.mk  project.config
applications/luci2-app-sqm/: Makefile
applications/luci2-app-sqm/share/acl.d/: sqm.json
applications/luci2-app-sqm/share/menu.d/: sqm.json
luci2-base/: Makefile
luci2-base/files/: luci2.default
luci2-base/host_tools/: oui.lua  oui.txt
luci2-base/htdocs/: luci2.html
luci2-base/htdocs/luci2/: bootstrap-datetimepicker.min.js  bootstrap-datetimepicker.zh-cn.js  cbi.js  file.js  firewall.js  luci2.js  network.js  rpc.js  session.js  system.js  uci.js  ui.js  wireless.js  zoneinfo.json
luci2-base/htdocs/luci2/css/: luci2.css
luci2-base/htdocs/luci2/i18n/: base.zh-cn.json
luci2-base/htdocs/luci2/proto/: 6in4.js  6rd.js  6to4.js  dhcp.js  dhcpv6.js  dslite.js  none.js  pppoe.js  static.js
luci2-base/htdocs/luci2/template/: network.diagnostics.htm  network.interfaces.htm  status.overview.htm  status.processes.htm  status.routes.htm  status.syslog.htm  system.cron.htm  system.reboot.htm  system.software.htm  system.startup.htm  system.upgrade.htm
luci2-base/htdocs/luci2/view/: network.dhcp.js  network.diagnostics.js  network.firewall.js  network.hosts.js  network.interfaces.js  (+18 more)
luci2-base/share/acl.d/: luci2.json
luci2-base/share/menu.d/: network.json  status.json  system.json
luci2-base/src/: CMakeLists.txt
luci2-base/src/io/: CMakeLists.txt  main.c
luci2-base/src/rpcd/: CMakeLists.txt  luci2.c
themes/luci2-theme-default/: Makefile
themes/luci2-theme-sidenav/: Makefile
(+10 files in other folders)
